--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>0FluffCook (BETA)</title>
+    <title>0FluffCook</title>
     <link rel="stylesheet" href="style.css">
     <meta name="theme-color" content="#000000">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,7 +14,7 @@
 <div class="container">
     <div style="display:flex; justify-content:space-between; align-items:center;">
         <div>
-            <h1>0FluffCook <span class="beta-tag">BETA</span></h1>
+            <h1>0FluffCook</h1>
             <div class="subtitle">V3.0 | No Ads. Just Food.</div>
         </div>
         <button onclick="toggleSettings()" class="icon-btn" style="font-size:1.5rem; background:none;">⚙️</button>
