--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="theme-color" content="#000000">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    
+    <link rel="manifest" href="manifest.json">
+
 </head>
 <body>
 
@@ -96,6 +99,16 @@
 </div>
 
 <script src="script.js"></script>
+
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('service-worker.js')
+                .then(reg => console.log('Service Worker registered: ', reg.scope))
+                .catch(err => console.log('Service Worker registration failed: ', err));
+        });
+    }
+</script>
 
 </body>
 </html>
